--- a/index.html
+++ b/index.html
@@ -8,14 +8,35 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="slide-container">
+    <div class="main-container">
       <div class="container" id="container-1">
-        <h1>hello world</h1>
-        <h1>hello world</h1>
-        <h1>hello world</h1>
-        <h1>hello world</h1>
+        <div class="search-bar">
+          <a href="#"><img src="./img/google-icon.png" alt="" /></a>
+          <input class="search-bar-input" type="text" />
+          <button><i class="fa-solid fa-magnifying-glass"></i></button>
+        </div>
+        <div class="searchBar-clock-space"></div>
+        <div class="clock"></div>
+        <div class="clock-app-space"></div>
+        <div class="app-1 app">
+          <a href="#"><img src="./img/app-store.png" alt="" /></a>
+        </div>
+        <div class="app-2 app">
+          <a href="#"><img src="./img/app-store.png" alt="" /></a>
+        </div>
+        <div class="app-3 app">
+          <a href="#"><img src="./img/app-store.png" alt="" /></a>
+        </div>
+        <div class="app-4 app">
+          <a href="#"><img src="./img/app-store.png" alt="" /></a>
+        </div>
       </div>
       <div class="container" id="container-2"></div>
+    </div>
+    <div id="navigation-bar">
+      <a href="#"><i class="fa-solid fa-chevron-left"></i></a>
+      <a href="./index.html"><i class="fa-regular fa-circle"></i></a>
+      <a href="#"><i class="fa-solid fa-chevron-right"></i></a>
     </div>
   </body>
 </html>
