music player half html css compleate

--- a/home.html
+++ b/home.html
@@ -42,7 +42,9 @@
           /></a>
         </div>
         <div class="app-2 app">
-          <a href="#"><img src="./img/app-store.png" alt="" /></a>
+          <a href="./apps/musicPlayer.html"
+            ><img src="./img/music-player.png" alt=""
+          /></a>
         </div>
         <div class="app-3 app">
           <a href="#"><img src="./img/app-store.png" alt="" /></a>
