--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/navigation-bar.css" />
+    <link rel="stylesheet" href="./css/status-bar.css" />
     <link rel="stylesheet" href="./css/all.min.css" />
     <title>Document</title>
   </head>
-  <body style="width: 100%; max-width: 600px">
+  <body onload="initClock()" style="width: 100%; max-width: 600px">
+    <div id="status-bar" style="color: #fff">
+      <div class="status-bar-clock">
+        <span id="hour">00</span>:<span id="minutes">00</span>
+        <span id="period">AM</span>
+      </div>
+      <div class="status-bar-battery">
+        <i class="fa-solid fa-wifi"></i>
+        <i class="fa-solid fa-signal"></i>
+        <i class="fa-solid fa-battery-three-quarters"></i>
+      </div>
+    </div>
     <iframe
       style="
         width: 100%;
@@ -23,5 +35,6 @@
       <a href="./index.html"><i class="fa-regular fa-circle"></i></a>
       <a href="#"><i class="fa-solid fa-chevron-right"></i></a>
     </div>
+    <script src="./JavaScript/clock/statusBarClock.js"></script>
   </body>
 </html>
