music player 3/4 there

--- a/apps/musicPlayer.html
+++ b/apps/musicPlayer.html
@@ -15,11 +15,11 @@
         <i class="fa-solid fa-ellipsis"></i>
       </div>
       <div class="img-area">
-        <img src="../music/musicThumbnail/TeraMeraSafar.jpg" alt="" />
+        <img src="../music/musicThumbnail/TeraMeraSafar.jpg" alt="Thumbnail" />
       </div>
       <div class="song-details">
-        <p class="songName">Tera Mera Safar</p>
-        <p class="artistName">Ji Ji Balbute</p>
+        <p class="songName">"Song Name"</p>
+        <p class="artistName">"Artist Name"</p>
       </div>
       <div class="progress-area">
         <div class="progress-bar">
@@ -27,18 +27,115 @@
         </div>
         <div class="timer">
           <span class="current">0.21</span>
-          <span class="current">3.12</span>
+          <span class="duration">3.12</span>
         </div>
+        <audio id="main-audio" src="../music/TeraMeraSafar.mp3"></audio>
       </div>
       <div class="controls">
-        <i class="fa-solid fa-repeat"></i>
-        <i class="fa-solid fa-backward-step"></i>
+        <i id="repeat-playlist" class="fa-solid fa-repeat"></i>
+        <i id="previous" class="fa-solid fa-backward-step"></i>
         <div class="play-pause">
           <i class="fa-solid fa-play"></i>
         </div>
-        <i class="fa-solid fa-forward-step"></i>
-        <i class="fa-solid fa-list-ul"></i>
+        <i id="next" class="fa-solid fa-forward-step"></i>
+        <i id="more-music" class="fa-solid fa-list-ul"></i>
+      </div>
+      <div class="music-list">
+        <div class="header">
+          <div class="row">
+            <i class="fa-solid fa-list-ul"></i>
+            <span>Music list</span>
+          </div>
+          <i id="close" class="fa-solid fa-xmark"></i>
+        </div>
+        <div class="ul">
+          <li>
+            <div class="row">
+              <span>artist name</span>
+              <p>song name</p>
+            </div>
+            <span class="audio-duration">3:12</span>
+          </li>
+          <li>
+            <div class="row">
+              <span>artist name</span>
+              <p>song name</p>
+            </div>
+            <span class="audio-duration">3:12</span>
+          </li>
+          <li>
+            <div class="row">
+              <span>artist name</span>
+              <p>song name</p>
+            </div>
+            <span class="audio-duration">3:12</span>
+          </li>
+          <li>
+            <div class="row">
+              <span>artist name</span>
+              <p>song name</p>
+            </div>
+            <span class="audio-duration">3:12</span>
+          </li>
+          <li>
+            <div class="row">
+              <span>artist name</span>
+              <p>song name</p>
+            </div>
+            <span class="audio-duration">3:12</span>
+          </li>
+          <li>
+            <div class="row">
+              <span>artist name</span>
+              <p>song name</p>
+            </div>
+            <span class="audio-duration">3:12</span>
+          </li>
+          <li>
+            <div class="row">
+              <span>artist name</span>
+              <p>song name</p>
+            </div>
+            <span class="audio-duration">3:12</span>
+          </li>
+          <li>
+            <div class="row">
+              <span>artist name</span>
+              <p>song name</p>
+            </div>
+            <span class="audio-duration">3:12</span>
+          </li>
+          <li>
+            <div class="row">
+              <span>artist name</span>
+              <p>song name</p>
+            </div>
+            <span class="audio-duration">3:12</span>
+          </li>
+          <li>
+            <div class="row">
+              <span>artist name</span>
+              <p>song name</p>
+            </div>
+            <span class="audio-duration">3:12</span>
+          </li>
+          <li>
+            <div class="row">
+              <span>artist name</span>
+              <p>song name</p>
+            </div>
+            <span class="audio-duration">3:12</span>
+          </li>
+          <li>
+            <div class="row">
+              <span>artist name</span>
+              <p>song name</p>
+            </div>
+            <span class="audio-duration">3:12</span>
+          </li>
+        </div>
       </div>
     </div>
+    <script src="../JavaScript/musicPlayer.js"></script>
   </body>
 </html>
