--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
   </head>
   <body onload="initClock()" style="width: 100%; max-width: 600px">
-    <div id="status-bar" style="color: #fff">
+    <div id="status-bar">
       <div class="status-bar-clock">
         <span id="hour">00</span>:<span id="minutes">00</span>
         <span id="period">AM</span>
